<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.lang.String" />

        <variable
            name="country"
            type="com.example.mohammadamarneh.harritaskkotlin.model.Country" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        tools:context=".ui.country.countryDetailsFragment.CountryDetailsFragment">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtName"
                    android:text="@{country.name}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/region"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtRegion"
                    android:text="@{country.region}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/capital"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtCapital"
                    android:text="@{country.capital}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/population"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtPopulation"
                    android:text="@{String.valueOf(country.population)}"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/img"
            android:flag="@{country.alpha2Code}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</layout>

